data/derived/comb/progs/unify/prog6422.ml.out
Characters 71-72:
  then (wwhile f b')
               ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type ('a -> 'b * bool) * 'a
